Fixed problem with make dist so that packages can be made and distributed.
Commented out the sizesigns test case because the files for it were not in CVS.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -324,15 +324,17 @@ HEADERSRC = Headers/abstBodyNode.h           Headers/ltokenList.h \
           Headers/lsymbol.h                Headers/version.h \
           Headers/lsymbolList.h            Headers/warnClause.h \
           Headers/lsymbolSet.h             Headers/ynm.h \
-          Headers/ltoken.h   Headers/splintMacros.nf  
+          Headers/ltoken.h   Headers/splintMacros.nf  \
+          Headers/pointers.h   Headers/mstring.h   Headers/help.h
 
 
 IFILES = ctbase.i  cttable.i  exprDataQuite.i
 
 EXTRA_DIST = $(BISON_SRC) bison.head bison.reset $(HEADERSRC)  \
             flags.def cscanner.l flex.head flex.reset $(IFILES) \
- Headers/256_random_numbers.nf  Headers/splintMacros.nf	Headers/reservedNames.nf Makefile.binary.am   Makefile.binary.in
+ Headers/256_random_numbers.nf  Headers/splintMacros.nf	Headers/reservedNames.nf
 
+#Makefile.binary.am   Makefile.binary.in
 
 #Files that are used on systems that do not have bison or yacc
 DER_BISON_FILES = signature.c.der  cgrammar.c.der  mtgrammar.c.der \
