ADded numabstract types.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -349,7 +349,8 @@ COMMONSRC = $(CPPSRC) $(CSRC) $(CHECKSRC) $(GENERALSRC) \
 ALLSRC = $(GRAMSRC) $(COMMONSRC) $(SPLINTSRC) $(OVERFLOWCHSRC) $(DER_FILES) $(HEADERSRC)
 
 #files to run Splint on
-LINTSRC = $(COMMONSRC) $(SPLINTSRC) cscanner.c cgrammar.c
+LINTSRC = $(COMMONSRC) $(SPLINTSRC) 
+## cscanner.c cgrammar.c
 
 
 #ALLSRC = $(COMMONSRC) $(SPLINTSRC) $(DER_FILES) $(HEADERSRC)
