--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -135,7 +135,7 @@ UNITTESTS = \
   funcpointer functionmacro glob globals impabstract info init inparam internal iter keep libs \
   linked lintcomments list longint loopexec looptesteffect \
   macros macrosef merge mergenull modifies modtest moduncon \
-  mongoincludes mystrncat noeffect null observer oldstyle outglob outparam \
+  mongoincludes mystrncat noeffect null nullret nullassign numabstract observer oldstyle outglob outparam \
   parentype postnotnull preds prefixes printflike rc refcounts release repexpose \
   returned sharing shifts sizesigns slovaknames \
   specclauses \
@@ -1076,11 +1076,12 @@ chararraylit:
 
 ### Two addition errors detected with 2.5 with -numliteral.
 
+### evans 2002-12-15: finds one more but in charlit
 .PHONY: charlit
 charlit:
 	-$(SPLINTR) +hints charlit.c -expect 4
 	-$(SPLINTR) +hints -numliteral charlit.c -expect 6
-	-$(SPLINTR) +hints charlit.c +charintliteral +ignoresigns
+	-$(SPLINTR) +hints charlit.c +charintliteral +ignoresigns -expect 1
 
 .PHONY: clauses
 clauses: 
@@ -1391,6 +1392,12 @@ mystrncat:
 noeffect:
 	${SPLINTP} noeffect.c +allmacros +checks -expect 3
 
+.PHONY: numabstract
+numabstract:
+	-$(SPLINTR) numabstract.c -expect 8
+	-$(SPLINTR) numabstract.c +numabstractlit -expect 7
+	-$(SPLINTR) numabstract.c -numabstractcast -expect 7
+
 ###
 ### 2002-01-01: null1.c: expect increased to 15 because out must be defined
 ###                         checking detects one new error
@@ -1414,7 +1421,7 @@ null:
 .PHONY: nullret
 nullret:
 	-$(SPLINTR) nullret.c -expect 2
-	-$(SPLINTR) -nullret nullret.c -expect 1
+	-$(SPLINTR) -nullret nullret.c -expect 0
 
 .PHONY: nullassign
 nullassign:
@@ -1540,10 +1547,8 @@ shifts:
 
 ### evans - added 2002-08-17: check warnings with arbitrary integral types
 sizesigns:
-	-$(SPLINTR) +strict sizesigns.c
-	-$(SPLINTR) +strict +ignoresigns sizesigns.c
-	-$(SPLINTR) +strict +matcharbitraryintegral sizesigns.c
-	-$(SPLINTR) +strict +matcharbitraryintegral +ignoresigns sizesigns.c
+	-$(SPLINTR) +strict sizesigns.c -expect 5
+	-$(SPLINTR) +strict +matchanyintegral sizesigns.c -expect 4
 
 .PHONY: slovaknames
 slovaknames:
