Added the flags likely-bounds, likely-bounds-write, and likely-bounds-read
Correspond to error messages for constraints that have only constants.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -332,6 +332,8 @@ IFILES = ctbase.i  cttable.i  exprDataQuite.i
 
 EXTRA_DIST = $(BISON_SRC) bison.head bison.reset $(HEADERSRC)  \
             flags.def cscanner.l flex.head flex.reset $(IFILES) \
+            .splintrc LICENSE \
+            Headers/cscannerHelp.h \
  Headers/256_random_numbers.nf  Headers/splintMacros.nf	Headers/reservedNames.nf
 
 #Makefile.binary.am   Makefile.binary.in
