--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -237,6 +237,8 @@ IFILES =  ctbase.i  cttable.i  exprDataQuite.i
 ## Non-built files we need to distribute
 EXTRA_DIST =  $(BISON_SRC) bison.head bison.reset $(HEADERSRC)  \
             flags.def cscanner.l flex.head flex.reset $(IFILES) \
+            .splintrc LICENSE \
+            Headers/cscannerHelp.h \
  Headers/256_random_numbers.nf  Headers/splintMacros.nf	Headers/reservedNames.nf
 #Makefile.binary.am   Makefile.binary.in
 
