--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1558,12 +1558,15 @@ EXTRA_DIST =  ./abst_t.lcl \
                 utypes.expect widestrings.expect  widestrings.c  \
                 functionmacro.expect functionmacro.c  info.c info.expect \
                 longint.c loopexec.c looptesteffect.c mergenull.c shifts.c \
+		longint.expect nullret.expect numabstract.expect \
+		sizesigns.expect typeof.expect \
                 manual.expect ./manual/Makefile \
                 ./manual/annotglobs.c  ./manual/bool.c  ./manual/bool.h  ./manual/clauses.c  ./manual/employee.h  ./manual/exposure.c  ./manual/globals.c  ./manual/ignore.c  ./manual/implicit.c  ./manual/intSet.h  ./manual/list.c  ./manual/loop.c  ./manual/macros.c  ./manual/modify.c  ./manual/mstring.c  ./manual/mstring.h  ./manual/mstringnn.c  ./manual/multiError.c  ./manual/names.c  ./manual/noeffect.c  ./manual/null.c  ./manual/only.c  ./manual/order.c  ./manual/palindrome.c  ./manual/palindrome.h  ./manual/refs.c  ./manual/returned.c  ./manual/rgb.c  ./manual/rstring.c  ./manual/rstring.h  ./manual/sample.c  ./manual/setChar.c  ./manual/setname.c  ./manual/setname.h  ./manual/special.c  ./manual/stack.c  ./manual/sumsquares.c  ./manual/switch.c  ./manual/testpal.c  ./manual/types.c  ./manual/unique.c  ./manual/usedef.c  ./manual/bounds.c \
                   arraydims.expect arraydims.c \
                   moreBufferTests2/fixedArrayType.c oldstyle2.c \
                   divzero.expect parentype.expect \
                   divzero.c parentype.c \
-stringliteral.expect  stringliteral.c
+stringliteral.expect  stringliteral.c \
+  numabstract.c sizesigns.c typeof.c   nullassign.expect 
 
 #		sizesigns.c sizesigns.expect \
