--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -477,6 +477,7 @@ EXTRA_DIST = ./abst_t.lcl \
               ./simplebufferConstraintTests/test7.c \
               ./sizeoftest/sizeof.c \
               ./sizeoftest/sizeofConst.c \
+              ./sizeoftest/Makefile \
               ./strchr/strchr.c \
               ./suppressfile/test.c \
               ./tainted/sprintf.c \
