--- a/Makefile.in
+++ b/Makefile.in
@@ -459,6 +459,11 @@ configure.binary:configure.binary.ac
 
 Makefile.binary.in:Makefile.binary.am
 	-automake Makefile.binary
+	$(SED) -e s/Makefile\.binary/Makefile/ Makefile.binary.in > tMakefile.binary.in
+#	$(RM) Makefile.binary.in
+	$(CP) tMakefile.binary.in Makefile.binary.in
+#drl add this hack 3/1/2003
+#make the generated makefile depend on Makefile not Makefile.binary
 
 $(binaryDir)/Makefile.in: $(binaryDir)/Makefile.am
 	-automake $(binaryDir)/Makefile
