Fixed type error causing a seg fault.

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -99,7 +99,7 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 
 
 #this is just a hack to get make dist to work.
-EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html manual.doc faq.txt realloc.doc
+EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html manual.pdf faq.txt manual.css html/manual.htm html/footer.html html/header.html html/realloc.htm
 
 man_MANS = splint.1 
 subdir = doc
@@ -172,6 +172,7 @@ top_distdir = ..
 distdir = $(top_distdir)/$(PACKAGE)-$(VERSION)
 
 distdir: $(DISTFILES)
+	$(mkinstalldirs) $(distdir)/html
 	@list='$(DISTFILES)'; for file in $$list; do \
 	  if test -f $$file || test -d $$file; then d=.; else d=$(srcdir); fi; \
 	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
