Added support for ISO C99 _Bool and stdbool bool/true/false.  The default boolname, truename and falsename were changed to be consistent with ISO C99's bool.

--- a/test/db2/Makefile
+++ b/test/db2/Makefile
@@ -9,7 +9,7 @@
 
 ### SHELL = /bin/csh -f
 
-SPLINT = splint -booltype "bool"
+SPLINT = splint -booltype "bool"  -booltrue TRUE -boolfalse FALSE
 LCL = $(SPLINT) -specundef +lh +quiet -nof
 SPLINTLH = $(SPLINT) +lh
 LCSFILES = dbase.lcs employee.lcs empset.lcs erc.lcs eref.lcs ereftab.lcs 
