--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -99,7 +99,7 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 
 
 #this is just a hack to get make dist to work.
-EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html manual.pdf faq.txt manual.css html/manual.htm html/footer.html html/header.html html/realloc.htm
+EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html manual.pdf  manual.css html/manual.htm html/footer.html html/header.html html/realloc.htm
 
 man_MANS = splint.1 
 subdir = doc
