--- a/configure.binary.ac
+++ b/configure.binary.ac
@@ -1,12 +1,13 @@
 dnl Process with autoconf to create a configure script  -*- Autoconf -*-
 AC_PREREQ(2.50)
-AC_INIT([Splint], [3.0.1.2], [splint-bug@splint.org], [splint])
+
+AC_INIT([Splint], [3.1.1], [splint-bug@splint.org], [splint])
 
 dnl This MUST precede any other macro
 AC_CONFIG_AUX_DIR([config])
 
 dnl Set up the source directory
-#AC_CONFIG_SRCDIR([src/lclinit.c])
+AC_CONFIG_SRCDIR([src/lclinit.c])
 
 dnl Deduce host
 AC_CANONICAL_SYSTEM
@@ -36,6 +37,7 @@ AC_CHECK_PROG(CAT, cat, cat, cat-is-missing)
 AC_CHECK_PROG(RM, rm, rm, rm-is-missing)
 AC_CHECK_PROG(MV, mv, mv, mv-is-missing)
 AC_CHECK_PROG(CP, cp, cp, cp-is-missing)
+AC_CHECK_PROG(SED, sed, sed, sed-is-missing)
 
 dnl Checks for header files.
 dnl Currently all disable, as the source files don't care about the results
@@ -98,6 +100,7 @@ mode_t x;
 fi
 if test $all = maybe ; then all=no ; fi
 AC_MSG_RESULT($all)
+AH_TEMPLATE([_ALL_SOURCE], [needed to expose mode_t on some machines])
 
 LCLOBJ='$(lcl_OBJECTS)'
 AC_ARG_WITH([lcl],
@@ -116,9 +119,14 @@ AC_SUBST(LCLOBJ)
 myprefix=$prefix
 test x$myprefix = xNONE && myprefix=$ac_default_prefix
 
+
+### Yuck!  This is really kludgey, but I don't understand autoconf well
+### enough to do something simple that always works.  Hopefully this does.
+
 # cpplib.h defines 2 include dirs; one is $includedir, the other is gcc's
 # include dir.  Not the most portable setup, but let's do our best.
-if test x$ac_cv_c_compiler_gnu = xyes; then
+
+if test x$GCC = xyes; then
   dnl Make sure to override NLS; this assumes gcc prints only
   dnl   Reading specs from blah
   dnl   gcc version blah
@@ -130,7 +138,11 @@ GCC_INCLUDE_DIR=/usr/include
 #  GCC_INCLUDE_DIR=`LANGUAGE= LANG= $CC -v 2>&1 | sed -n -e '/^gcc/ d' -e 's/.* \(.*\)specs/\1include/p'`
   AC_DEFINE_UNQUOTED(GCC_INCLUDE_DIR, "$GCC_INCLUDE_DIR",
                      [system include directory])
+else
+GCC_INCLUDE_DIR=/usr/include
+AC_DEFINE_UNQUOTED(GCC_INCLUDE_DIR, "$GCC_INCLUDE_DIR", [system include directory])
 fi
+
 AC_DEFINE_UNQUOTED(GCC_INCLUDE_DIR2, "$myprefix/include",
                    [alternate include directory])
 
@@ -161,27 +173,27 @@ AC_DEFINE(UNIX, 1, [Define if you're on a Unixy system])
 #just define some Header constants for now...
 
 UNAME=`uname`
-AC_DEFINE_UNQUOTED(UNAME, "${UNAME}")
+AC_DEFINE_UNQUOTED(UNAME, "${UNAME}", uname output)
 
-AC_DEFINE_UNQUOTED(BUILD, "${build}")
-AC_DEFINE_UNQUOTED(HOST, "${host}")
-AC_DEFINE_UNQUOTED(TARGET, "${target}")
+AC_DEFINE_UNQUOTED(BUILD, "${build}", build)
+AC_DEFINE_UNQUOTED(HOST, "${host}", host)
+AC_DEFINE_UNQUOTED(TARGET, "${target}", target)
 
-AC_DEFINE_UNQUOTED(BUILD_ALIAS, "${build_alias}")
-AC_DEFINE_UNQUOTED(HOST_ALIAS, "${host_alias}")
-AC_DEFINE_UNQUOTED(TARGET_ALIAS, "${TARGET_ALIAS}")
+AC_DEFINE_UNQUOTED(BUILD_ALIAS, "${build_alias}", build_alias)
+AC_DEFINE_UNQUOTED(HOST_ALIAS, "${host_alias}", host_alias)
+AC_DEFINE_UNQUOTED(TARGET_ALIAS, "${TARGET_ALIAS}", target_alias)
 
-AC_DEFINE_UNQUOTED(BUILD_CPU, "${build_cpu}")
-AC_DEFINE_UNQUOTED(HOST_CPU, "$host_cpu")
-AC_DEFINE_UNQUOTED(TARGET_CPU, "${target_cpu}")
+AC_DEFINE_UNQUOTED(BUILD_CPU, "${build_cpu}", build_cpu)
+AC_DEFINE_UNQUOTED(HOST_CPU, "$host_cpu", host_cpu)
+AC_DEFINE_UNQUOTED(TARGET_CPU, "${target_cpu}", target_cpu)
 
-AC_DEFINE_UNQUOTED(BUILD_VENDOR, "${build_vendor}")
-AC_DEFINE_UNQUOTED(HOST_VENDOR, "${host_vendor}")
-AC_DEFINE_UNQUOTED(TARGET_VENDOR, "${target_vendor}")
+AC_DEFINE_UNQUOTED(BUILD_VENDOR, "${build_vendor}", build_vendor)
+AC_DEFINE_UNQUOTED(HOST_VENDOR, "${host_vendor}", host_vendor)
+AC_DEFINE_UNQUOTED(TARGET_VENDOR, "${target_vendor}", target_vendor)
 
-AC_DEFINE_UNQUOTED(BUILD_OS, "${build_os}")
-AC_DEFINE_UNQUOTED(HOST_OS, "${host_os}")
-AC_DEFINE_UNQUOTED(TARGET_OS,"${target_os}")
+AC_DEFINE_UNQUOTED(BUILD_OS, "${build_os}", build_os)
+AC_DEFINE_UNQUOTED(HOST_OS, "${host_os}", host_os)
+AC_DEFINE_UNQUOTED(TARGET_OS,"${target_os}", target_os)
 
 
 
